Fix inventory view on mobile

--- a/src/app/character/inventory-panel.component.scss
+++ b/src/app/character/inventory-panel.component.scss
@@ -27,10 +27,12 @@
 
         .filter {
             grid-area: filter;
+            min-width: 120px;
         }
 
         .view {
             grid-area: view;
+            min-width: 120px;
         }
 
         .sort {
